Fix for bug #18014: data loss caused by altering decimal fields.